# translategemma-ui

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  go.mod  go.sum
.github/workflows/: release.yml
Formula/: translategemma-ui.rb
cmd/translategemma-ui/: main.go
desktop/: package.json
desktop/scripts/: build-sidecar.mjs
desktop/src/: index.html  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
internal/app/: app.go  app_test.go  translate.go  translate_test.go
internal/config/: config.go  history.go  state.go
internal/huggingface/: client.go  client_test.go
internal/languages/: languages.go  languages_test.go
internal/logging/: logging.go
internal/models/: helpers.go  models.go
internal/modelstore/: selection.go  store.go  store_test.go
internal/platform/: platform.go  platform_test.go
internal/runtime/: manager.go  manager_test.go
internal/runtimeutil/: runtimeutil.go  runtimeutil_test.go
internal/translate/: service.go  service_test.go  text_segments.go  text_segments_test.go
internal/tui/: catalog_list.go  keys.go  model.go  model_test.go  tasks.go  update.go  view.go
internal/version/: version.go
internal/web/: api_access.go  assets.go  handlers_desktop.go  handlers_desktop_test.go  (+9 more)
tools/: build_release.sh  build_release_all.sh  lib_release.sh  render_homebrew_formula.sh  sync_webui_dist.sh
webui/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.setup.ts
(+19 files in other folders)
