[package]
name = "translategemma-ui-desktop"
version = "0.1.0"
description = "Tauri desktop shell for TranslateGemmaUI"
authors = ["zero"]
edition = "2021"

[lib]
name = "translategemma_ui_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
